--- a/.github/workflows/unit-test.yaml
+++ b/.github/workflows/unit-test.yaml
@@ -9,14 +9,15 @@ on:
     branches:
       - main
 jobs:
-  runs-on: ubuntu-latest
-  steps:
-    - name: install go
-      uses: actions/setup-go@v2
-      with:
-        go-version: 1.23.0
-    - uses: actions/checkout@v2
-    - name: lint
-      uses: golangci/golangci-lint-action@v2
-    - name: unit test
-      run: go test -v ./...
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - name: install go
+        uses: actions/setup-go@v2
+        with:
+          go-version: 1.23.0
+      - uses: actions/checkout@v2
+      - name: lint
+        uses: golangci/golangci-lint-action@v2
+      - name: unit test
+        run: go test -v ./...
