--- a/.github/workflows/unit-test.yaml
+++ b/.github/workflows/unit-test.yaml
@@ -18,9 +18,6 @@ jobs:
         with:
           go-version: 1.23.0
       - uses: actions/checkout@v2
-      - name: golangci-lint
-        uses: golangci/golangci-lint-action@v6
-        with:
-          version: v1.60
+      - run: golint ./...
       - name: unit test
         run: go test -v ./...
