--- a/.github/workflows/integrationtest.yml
+++ b/.github/workflows/integrationtest.yml
@@ -1,6 +1,8 @@
 name: integration tests
 on:
-  workflow_dispatch
+  workflow_dispatch:
+  schedule:
+    - cron: "00 21 * * *"
 jobs:
   test:
     runs-on: ubuntu-latest
