--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -77,5 +77,5 @@ jobs:
             "${OUT_BASE}/linux/amd64/synkctl_linux_amd64.tar.gz#linux_amd64" \
             "${OUT_BASE}/linux/arm64/synkctl_linux_arm64.tar.gz#linux_arm64" \
             "${OUT_BASE}/windows/amd64/synkctl_windows_amd64.zip#windows_amd64" \
-            "${OUT_BASE}/darwin/arm64/synkctl_darwin_arm64.tar.gz#osx_arm64" \
-            "${OUT_BASE}/darwin/amd64/synkctl_darwin_amd64.tar.gz#osx_amd64"
+            "${OUT_BASE}/darwin/arm64/synkctl_darwin_arm64.tar.gz#darwin_arm64" \
+            "${OUT_BASE}/darwin/amd64/synkctl_darwin_amd64.tar.gz#darwin_amd64"
