--- a/.github/workflows/integrationtest.yml
+++ b/.github/workflows/integrationtest.yml
@@ -5,7 +5,7 @@ on:
     - cron: "00 21 * * *"
 jobs:
   test:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     steps:
       - name: install go
         uses: actions/setup-go@v2
