--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,7 +39,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Set RELEASE_VERSION ENV var
-        run: echo "RELEASE_VERSION=${GITHUB_REF:10}" >> $GITHUB_ENV
+        run: echo "RELEASE_VERSION=${GITHUB_REF:10}"
       - uses: actions/setup-go@v2
         with:
           go-version: 1.23.0
@@ -54,6 +54,7 @@ jobs:
           OUT_BASE: ./bin/${{ env.RELEASE_VERSION }}
           OUTPUT_PATH_FORMAT: ./bin/${{ env.RELEASE_VERSION }}/{{.OS}}/{{.Arch}}/synkctl
         run: |
+          echo "OUTPUT PATH FORMAT: ${OUTPUT_PATH_FORMAT}"
           gox -osarch="${PLATFORMS}" -ldflags "-X ${VERSION_INJECT}=${RELEASE_VERSION}" -output "${OUTPUT_PATH_FORMAT}"
           tar -czvf "${OUT_BASE}/darwin/arm64/synkctl_darwin_arm64.tar.gz" -C "${OUT_BASE}/darwin/arm64" synkctl
           tar -czvf "${OUT_BASE}/darwin/amd64/synkctl_darwin_amd64.tar.gz" -C "${OUT_BASE}/darwin/amd64" synkctl
