--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,7 +39,9 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Set RELEASE_VERSION ENV var
-        run: echo "RELEASE_VERSION=${GITHUB_REF:10}"
+        run: |
+          echo "GITHUB_ENV: $GITHUB_ENV" 
+          echo "RELEASE_VERSION=${GITHUB_REF:10}" >> $GITHUB_ENV
       - uses: actions/setup-go@v2
         with:
           go-version: 1.23.0
